unpackaged/main/default/objects/splashthat__TriggerSettings__c/fields/splashthat__IsAfterDeleteDisabled__c.field-meta.xml
<CustomField>
    <fullName>splashthat__IsAfterDeleteDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Delete Disabled?</label>
    <type>Checkbox</type>
</CustomField>