unpackaged/main/default/objects/splashthat__TriggerSettings__c/fields/splashthat__IsAfterUndeleteDisabled__c.field-meta.xml
<CustomField>
    <fullName>splashthat__IsAfterUndeleteDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Undelete Disabled?</label>
    <type>Checkbox</type>
</CustomField>