unpackaged/main/default/objects/splashthat__TriggerSettings__c/fields/splashthat__IsAfterUpdateDisabled__c.field-meta.xml
<CustomField>
    <fullName>splashthat__IsAfterUpdateDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Update Disabled?</label>
    <type>Checkbox</type>
</CustomField>