unpackaged/main/default/objects/splashthat__TriggerSettings__c/fields/splashthat__IsBeforeDeleteDisabled__c.field-meta.xml
<CustomField>
    <fullName>splashthat__IsBeforeDeleteDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Before Delete Disabled?</label>
    <type>Checkbox</type>
</CustomField>