unpackaged/main/default/objects/splashthat__TriggerSettings__c/fields/splashthat__IsBeforeInsertDisabled__c.field-meta.xml
<CustomField>
    <fullName>splashthat__IsBeforeInsertDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Before Insert Disabled?</label>
    <type>Checkbox</type>
</CustomField>